# move-rs

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  TestHttprequests.http  docker-compose.yml  rls-build.sh
.cargo/: config
.circleci/: config.yml
extensions/: rust-lang.rust-0.5.3.vsix
src/: config.rs  main.rs  move_app.rs
src/mocks/: mod.rs
src/model/: appliance.rs  area.rs  building.rs  employee.rs  facility.rs  floor.rs  furniture.rs  meeting_room.rs  mod.rs  person.rs  seat.rs  workspace.rs
src/route/: building.rs  floor.rs  mod.rs  person.rs  seat.rs
static/: index.html
tests/: integration.rs
