[package]
name = "move-rs"
version = "0.1.0"
authors = ["rsteube <rsteube@users.noreply.github.com>"]

[dependencies]
dotenv = "0.13.0"
rocket = "0.4"
rocket_contrib = "0.4"
rusoto_dynamodb = "0.35"
rusoto_core = "0.35"
serde = "1.0"
serde_derive = "1.0"
serde_dynamodb = { git = "https://github.com/Ophirr33/serde_dynamodb" }
futures = "0.1"
uuid = { version = "0.7", features = ["v4"] }
assert_cli = "0.6.3"
clap = "2.32.0"

[dev-dependencies]
mocktopus = "0.7.0"
tokio-timer = "0.2.7"
